# cli-agent-prompt-subscriber

./: .gitignore  README.md  install.sh  update.sh
hooks/: denied_list.json  send_logs.py
hooks/claude/: save_conversation.py
hooks/gemini/: save_conversation.py
server/: main.py  pyproject.toml
